changed path.of to paths.get